--- a/src/Components/SixToNine/SixToNine.css
+++ b/src/Components/SixToNine/SixToNine.css
@@ -3,10 +3,31 @@
   /* margin-left:4vw; */
   align-self: center;
   justify-content: center;
-  margin-top: 3vh;
+  margin-top: 1vh;
   font-size: larger;
   font-weight: bold;
   z-index: 9;
+}
+
+.searchbar {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.searchInput {
+  border-radius: 30px;
+  padding: 10px;
+  background: #fff;
+  border: 1px solid black;
+  box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.3),
+    -4px -4px 6px 0 rgba(116, 125, 136, 0.2),
+    inset -4px -4px 6px 0 rgba(255, 255, 255, 0.2),
+    inset 4px 4px 6px 0 rgba(0, 0, 0, 0.2);
+  margin-bottom: 0;
+  text-align: center;
+  font-family: "Mona-Sans Regular";
 }
 
 .storyBoxGrey {
@@ -14,7 +35,7 @@
 }
 
 .storiesContainer {
-  margin-top: 3vh;
+  /* margin-top: 1vh; */
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -23,6 +44,7 @@
   justify-content: center;
   z-index: 9;
   overflow: scroll;
+  height: 65vh;
 }
 
 @media only screen and (max-width: 600px) {
