--- a/src/Components/StoryBox/StoryBox.css
+++ b/src/Components/StoryBox/StoryBox.css
@@ -1,5 +1,4 @@
 .storyBox {
-  /* display: flex; */
   border: 1px solid black;
   background-color: #e88873;
   border-radius: 25px;
@@ -8,19 +7,20 @@
   margin: 2vw;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  display: grid;
+}
 
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  /* grid-gap: 1rem; */
+.imgAndSlug {
+  display: grid;
   grid-template-areas: "content-2 content-3";
+  justify-content: space-around;
+  align-items: center;
 }
 
 .indivName {
-  grid-area: content-2;
-  /* margin: 20px; */
-  margin-left: 20px;
+  grid-area: header;
+  margin-left: 1rem;
   margin-top: 10px;
+  margin-bottom: 0 !important;
 }
 .storyBoxGrey {
   background-color: rgb(149, 149, 149) !important;
@@ -39,19 +39,16 @@
   height: 14vh;
   background-color: white;
   grid-area: content-2;
-  margin: 20px;
-  margin-top: 10px;
-  /* margin-bottom: 25px; */
+  margin-left: 20px;
 }
 
 .indivSlug {
   font-family: Mona-Sans Regular;
   grid-area: content-3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  align-self: center;
+  margin-left: 20px;
+  width: 10vw;
+  height: 14vh;
+  margin-top: 30px;
 }
 
 @media only screen and (max-width: 600px) {
