--- a/src/Components/StoryBox/StoryBox.css
+++ b/src/Components/StoryBox/StoryBox.css
@@ -4,7 +4,7 @@
   border-radius: 25px;
   height: 25vh;
   width: 20vw;
-  margin: 2vw;
+  margin: 1.5vw;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -14,12 +14,13 @@
   grid-template-areas: "content-2 content-3";
   justify-content: space-around;
   align-items: center;
+  overflow: hidden;
 }
 
 .indivName {
   grid-area: header;
   margin-left: 1rem;
-  margin-top: 10px;
+  margin-top: 0.5rem;
   margin-bottom: 0 !important;
 }
 .storyBoxGrey {
