--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -40,7 +40,7 @@
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  overflow: scroll; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   display: flex;
@@ -49,7 +49,7 @@
   align-items: center;
   align-self: center;
   align-content: center;
-  margin-top: 0;
+  /* margin-top: 0; */
   justify-content: flex-start;
 }
 
@@ -99,10 +99,14 @@
 }
 
 .innerTextInfo {
+  font-family: "Open Sans", sans-serif;
+
   display: flex;
   align-items: center;
   justify-content: center;
   align-self: center;
+  margin-top: 1vh;
+  overflow: scroll;
 }
 
 .infobutton:hover {
@@ -148,7 +152,7 @@
   background-color: #258ea6;
   border-radius: 25px;
   transform: scale(1.5);
-  width: 25px;
+  /* width: 50px; */
   font-family: "Mona-Sans Regular", sans-serif;
   z-index: 9;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
