--- a/src/Components/StoryBox/StoryBox.css
+++ b/src/Components/StoryBox/StoryBox.css
@@ -38,9 +38,11 @@
   overflow: hidden;
   width: 6vw;
   height: 14vh;
+  max-width: 100%;
   background-color: white;
   grid-area: content-2;
   margin-left: 20px;
+  object-fit: cover;
 }
 
 .indivSlug {
