--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   background-color: #f4faff;
   /* font-family: "Open Sans", sans-serif; */
-  font-family: "Futura", sans-serif;
+  font-family: "Futura Medium", sans-serif;
   max-width: 100%;
   max-height: 100%;
   padding: env(safe-area-inset-top) env(safe-area-inset-right)
