--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@ body {
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
-  font-family: "Mona-Sans Black";
+  font-family: "Futura Medium", sans-serif;
+
   background-color: #f4faff;
 
   -webkit-font-smoothing: antialiased;
