--- a/src/Components/Copyright/Copyright.css
+++ b/src/Components/Copyright/Copyright.css
@@ -5,7 +5,7 @@
   right: 0;
   left: 0;
   text-align: center;
-  font-family: "Mona-Sans Regular";
+  font-family: "Mona-Sans Regular", sans-serif;
   font-size: medium;
   z-index: 100 !important;
   display: flex;
@@ -22,7 +22,7 @@
   width: 15vw;
   right: 0;
   left: 0;
-  font-family: "Mona-Sans Regular";
+  font-family: "Mona-Sans Regular", sans-serif;
   font-size: medium;
   z-index: 100 !important;
   display: flex;
