--- a/src/Components/Pagination/Pagination.css
+++ b/src/Components/Pagination/Pagination.css
@@ -17,10 +17,12 @@
   align-self: center;
   margin: auto;
   text-align: center;
+  font-family: "Mona-Sans Regular", sans-serif;
 }
 
 .paginationText:hover {
   cursor: pointer;
+  font-family: "Mona-Sans Regular", sans-serif;
 }
 
 .paginationNum {
@@ -28,12 +30,15 @@
   /* background-color: #e88873; */
   /* padding: 10px; */
   margin: 10px;
+  font-family: "Mona-Sans Regular", sans-serif;
+
   /* border-radius: 30%; */
 }
 
 .paginationText {
   text-align: center;
   padding: 10px;
+  font-family: "Mona-Sans Regular", sans-serif;
 }
 .paginationNum :hover {
   cursor: pointer;
