--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -95,6 +95,7 @@
 .innerText {
   display: flex;
   justify-content: flex-end;
+  font-family: "Mona-Sans Regular", sans-serif;
 }
 
 .innerText:hover {
@@ -144,7 +145,7 @@
   height: 3vh;
   transform: scale(1.5);
   width: 50px;
-  font-family: "Mona Sans";
+  font-family: "Mona-Sans Regular", sans-serif;
   z-index: 9;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
