colour age changes

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #f4faff;
+  /* background-color: #f4faff; */
   /* font-family: "Open Sans", sans-serif; */
   font-family: "Futura Medium", sans-serif;
   max-width: 100%;
