--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -16,7 +16,7 @@
 .personInfo {
   background-color: white;
   border: 2px solid black;
-  border-radius: 25px;
+  border-radius: 15px !important;
   width: 75vw;
   height: 75vh !important;
   z-index: 9;
