--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif; */
   font-family: "Futura Medium", sans-serif;
 
-  background-color: #f4faff;
+  background-color: #fffffb;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
