--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -18,20 +18,32 @@
 }
 
 .ageGroupIndiv {
-  border: 1px solid black;
+  /* border: 1px solid black;
   background-color: #e88873;
   color: #f4faff;
   width: 18vw;
   height: 20vh;
   border-radius: 15px;
+  
+  
+  
+  
+  z-index: 9;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
   display: flex;
+  font-size: x-large;
   justify-content: center;
   align-items: center;
-  font-size: x-large;
-  font-family: "Mona-Sans Regular", sans-serif;
-
-  z-index: 9;
+  border: 1px solid black;
+  background-color: #fff;
+  border-radius: 5px;
+  height: 20vh;
+  width: 20vw;
+  margin: 1.5vw;
+  margin-top: 1.5vw;
+  flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  font-family: "Mona-Sans Regular", sans-serif;
 }
 
 .ageGroupIndivBlocked {
@@ -59,7 +71,6 @@
 
 .ageGroupIndiv:hover {
   cursor: pointer;
-  color: #e88873;
   background-color: white;
   z-index: 9;
 }
