--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -8,6 +8,24 @@
   font-family: "Mona Sans", sans-serif;
 }
 
+.testSize {
+  height: 20vh;
+  margin: 1.5vw;
+  margin-top: 1.5vw;
+  font-size: x-large;
+  justify-content: center;
+  width: 20vw;
+  border-radius: 5px;
+
+  align-items: center;
+  /* border: 1px solid black; */
+}
+.expand {
+  height: 50vh !important;
+  /* width: 10vw; */
+  /* background-color: wheat; */
+}
+
 .ageGroups {
   z-index: 9;
   margin-top: 10vh;
@@ -18,18 +36,6 @@
 }
 
 .ageGroupIndiv {
-  /* border: 1px solid black;
-  background-color: #e88873;
-  color: #f4faff;
-  width: 18vw;
-  height: 20vh;
-  border-radius: 15px;
-  
-  
-  
-  
-  z-index: 9;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
   display: flex;
   font-size: x-large;
   justify-content: center;
