--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,9 +1,9 @@
 .navbar {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   height: 7vh;
-  margin-top: 0.5rem;
+  margin-top: 0.2rem;
   z-index: 9;
   font-family: "Mona Sans", sans-serif;
 }
@@ -18,7 +18,7 @@
   font-weight: bold;
   font-size: larger;
   justify-content: flex-start;
-  padding-left: 4rem;
+  padding-left: 1rem;
   z-index: 9;
   font-family: "Mona Sans", sans-serif;
 }
