--- a/src/Components/AnimCard/AnimCard.css
+++ b/src/Components/AnimCard/AnimCard.css
@@ -52,7 +52,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  height: 90vh;
+  /* height: 90vh; */
   width: 80vw;
   font-family: "Mona-Sans Regular", sans-serif;
 }
