--- a/src/Components/Pagination/Pagination.css
+++ b/src/Components/Pagination/Pagination.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   align-self: center;
   position: fixed;
   width: 100vw;
@@ -11,6 +11,7 @@
 
 .paginationNav {
   display: flex;
+  align-items: flex-start;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -30,6 +31,7 @@
   /* background-color: #e88873; */
   /* padding: 10px; */
   margin: 10px;
+  padding-bottom: 40px;
   font-family: "Mona-Sans Regular", sans-serif;
 
   /* border-radius: 30%; */
@@ -37,7 +39,6 @@
 
 .paginationText {
   text-align: center;
-  padding: 10px;
   font-family: "Mona-Sans Regular", sans-serif;
   font-weight: bold;
 }
