--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -111,6 +111,10 @@
   height: 50%;
   width: 80%;
   font-family: "Mona-Sans Regular", sans-serif;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .backRight {
   width: 50%;
