--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -57,7 +57,7 @@
   font-size: x-large;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   background-color: #fff;
   border-radius: 5px;
   height: 20vh;
@@ -65,7 +65,11 @@
   margin: 1.5vw;
   margin-top: 1.5vw;
   flex-direction: column;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+   */
+  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px; */
   font-family: "Mona-Sans Regular", sans-serif;
 }
 
