--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -14,7 +14,7 @@
 }
 .personInfo {
   background-color: white;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   border-radius: 10px !important;
   width: 75vw;
   height: 75vh !important;
@@ -23,6 +23,8 @@
   font-size: large;
   justify-items: center;
   font-family: "Mona-Sans Regular", sans-serif;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
   /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
 }
 
@@ -30,8 +32,9 @@
   display: flex;
   flex-direction: row;
   background-color: white;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   font-family: "Mona-Sans Regular", sans-serif;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
   border-radius: 10px;
   width: 75vw;
