--- a/src/Components/Person/PersonBack.css
+++ b/src/Components/Person/PersonBack.css
@@ -17,7 +17,7 @@
   display: grid;
   grid-template-columns: auto auto;
   background-color: white;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   border-radius: 25px;
   width: 75vw;
   height: auto;
@@ -29,7 +29,7 @@
 .personInfo2 {
   display: flex;
   background-color: white;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   border-radius: 25px;
   height: 75vh;
   width: 75vw;
