--- a/src/Components/SixToNine/SixToNine.css
+++ b/src/Components/SixToNine/SixToNine.css
@@ -7,30 +7,40 @@
   font-weight: bold;
   z-index: 9;
   font-family: "Mona-Sans Regular", sans-serif;
+  margin-bottom: 10px;
+}
+
+.magnifyingGlass {
+  margin-left: 10px;
+  padding: 10px;
+  background-color: #fff;
+  /* border: 1px solid black; */
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .searchbar {
   margin: auto;
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 10px;
   font-family: "Mona-Sans Regular", sans-serif;
-  /* margin-bottom: 2vh; */
+  border-radius: 15px;
+  width: 20vw;
 }
 
 .searchInput {
   border-radius: 10px;
   padding: 10px;
   background: #fff;
-  border: 1px solid black;
-  box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.3),
-    -4px -4px 6px 0 rgba(116, 125, 136, 0.2),
-    inset -4px -4px 6px 0 rgba(255, 255, 255, 0.2),
-    inset 4px 4px 6px 0 rgba(0, 0, 0, 0.2);
+  border: 0px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  outline: none;
   margin-bottom: 0;
   text-align: center;
   font-family: "Mona-Sans Regular", sans-serif;
-  width: 20vw;
+  width: 15vw;
 }
 
 .storyBoxGrey {
