--- a/src/Components/StoryBox/StoryBox.css
+++ b/src/Components/StoryBox/StoryBox.css
@@ -1,8 +1,9 @@
 .storyBox {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   background-color: #fff;
   border-radius: 5px;
   height: 40vh;
+  padding: 1px;
   width: 20vw;
   margin: 1.5vw;
   margin-top: 1.5vw;
