--- a/src/Components/AnimCard/AnimCard.css
+++ b/src/Components/AnimCard/AnimCard.css
@@ -26,7 +26,9 @@
   font-family: "Mona-Sans Regular", sans-serif;
 }
 .animCardVideo {
-  border: 2px solid black;
+  /* border: 2px solid black; */
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
   display: flex;
   align-items: center;
   justify-content: center;
