--- a/src/Components/Copyright/Copyright.css
+++ b/src/Components/Copyright/Copyright.css
@@ -63,7 +63,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .mobileFooter {
+  /* .mobileFooter {
     position: fixed;
     bottom: 0;
     right: auto;
@@ -81,7 +81,7 @@
     opacity: 100%;
     transform: scale(1.2);
     z-index: -1;
-  }
+  } */
   .copyrightText {
     display: none;
   }
