--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -8,22 +8,39 @@
   font-family: "Mona Sans", sans-serif;
 }
 
+.underlineNice {
+  background-image: linear-gradient(90deg, #e67399, #f2a640);
+  /* text-decoration: underline; */
+  background-position: bottom;
+  background-size: 100% 30%;
+  background-repeat: no-repeat;
+}
+
 .introText {
   font-size: medium;
-  margin-top: 3rem;
-  display: flex;
+  margin-top: 1rem;
+  /* display: flex; */
   font-family: "Mona Sans", sans-serif;
+  list-style: none;
   text-align: center;
   align-items: center;
   justify-content: center;
   width: 80%;
+  font-size: large;
 }
 .introDiv {
   display: flex;
   font-family: "Mona Sans", sans-serif;
   text-align: center;
   align-items: center;
+  align-self: center;
+  align-items: center;
   justify-content: center;
+  width: 80%;
+  margin: auto;
+  /* border: 1px solid black; */
+  /* border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
 }
 .testSize {
   height: 20vh;
@@ -45,11 +62,13 @@
 
 .ageGroups {
   z-index: 9;
-  margin-top: 10vh;
+  margin-top: 5vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   font-family: "Mona-Sans Regular", sans-serif;
+  margin-bottom: 5vh;
+  padding-bottom: 5vh;
 }
 
 .ageGroupIndiv {
@@ -135,8 +154,11 @@ a {
 
 @media only screen and (max-width: 600px) {
   .ageGroups {
-    flex-direction: column;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
     margin-top: 0px;
+    flex-wrap: wrap;
   }
   .ageText {
     margin-bottom: 0px !important;
