--- a/src/Components/SixToNine/SixToNine.css
+++ b/src/Components/SixToNine/SixToNine.css
@@ -92,6 +92,14 @@
     align-self: center;
     align-content: center;
     margin: auto;
-    margin-top: 0;
+    margin-top: 1rem;
+  }
+
+  .searchbar {
+    width: 100% !important;
+  }
+
+  .searchInput {
+    width: 50%;
   }
 }
