--- a/src/Components/StoryBox/StoryBox.css
+++ b/src/Components/StoryBox/StoryBox.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   font-family: "Mona-Sans Regular", sans-serif;
+  overflow: scroll;
 }
 
 .imgAndSlug {
@@ -55,6 +56,7 @@
   width: 10vw;
   height: 14vh;
   margin-top: 30px;
+  overflow: scroll;
 }
 
 .bottomDesc {
@@ -63,7 +65,22 @@
 }
 @media only screen and (max-width: 600px) {
   .storyBox {
-    height: 30vh !important;
-    width: 30vw;
+    height: 40vh !important;
+    padding: 1px;
+    width: 20vw;
+  }
+
+  .imgAndSlug {
+    display: flex;
+    /* grid-template-areas: "content-2 content-3"; */
+    justify-content: center;
+    align-items: center;
+    /* overflow: hidden; */
+    border: 0;
+  }
+
+  .indivImage {
+    width: 100% !important;
+    height: 20vh !important;
   }
 }
