--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,12 @@
 .App {
   text-align: center;
-  background-color: #f4faff;
+  background-color: #f5f5f7;
   /* font-family: "Open Sans", sans-serif; */
   font-family: "Futura Medium", sans-serif;
   max-width: 100%;
   max-height: 100%;
   padding: env(safe-area-inset-top) env(safe-area-inset-right)
     env(safe-area-inset-bottom) env(safe-area-inset-left);
-}
-
-ul {
-  padding-right: 20px;
 }
 
 .App-logo {
