--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -10,19 +10,18 @@
 
 .underlineNice {
   background-image: linear-gradient(90deg, #e67399, #f2a640);
-  /* text-decoration: underline; */
   background-position: bottom;
   background-size: 100% 30%;
   background-repeat: no-repeat;
+  text-align: center;
 }
 
 .introText {
   font-size: medium;
-  margin-top: 1rem;
-  /* display: flex; */
+  margin-top: 0;
   font-family: "Mona Sans", sans-serif;
   list-style: none;
-  text-align: center;
+  text-align: left;
   align-items: center;
   justify-content: center;
   width: 80%;
@@ -38,9 +37,6 @@
   justify-content: center;
   width: 80%;
   margin: auto;
-  /* border: 1px solid black; */
-  /* border-radius: 15px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
 }
 .testSize {
   height: 20vh;
@@ -50,24 +46,22 @@
   justify-content: center;
   width: 20vw;
   border-radius: 5px;
-
   align-items: center;
-  /* border: 1px solid black; */
 }
 .expand {
   height: 50vh !important;
-  /* width: 10vw; */
-  /* background-color: wheat; */
 }
 
 .ageGroups {
   z-index: 9;
   margin-top: 5vh;
+  font-weight: lighter;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: "Mona Sans", sans-serif;
   margin-bottom: 5vh;
+  font-weight: light;
   padding-bottom: 5vh;
 }
 
@@ -76,7 +70,8 @@
   font-size: x-large;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid black; */
+  color: #f5f5f7;
+
   background-color: #fff;
   border-radius: 5px;
   height: 20vh;
@@ -85,10 +80,6 @@
   margin-top: 1.5vw;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-   */
-  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
-    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px; */
   font-family: "Mona-Sans Regular", sans-serif;
 }
 
@@ -125,24 +116,6 @@ a {
   text-decoration: none;
   color: black;
   z-index: 9;
-}
-
-.blob1 {
-  z-index: 0;
-  top: -25%;
-  left: 40%;
-  position: fixed;
-  transform: scale(0.75);
-  display: flex;
-}
-
-.blob2 {
-  z-index: 0;
-  top: -25%;
-  left: -10%;
-  position: fixed;
-  transform: scale(0.85);
-  display: flex;
 }
 
 .imageDiv {
