--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -24,7 +24,6 @@
   /* justify-content: flex-start; */
   align-items: center;
   justify-content: center;
-  padding-left: 1rem;
   margin: auto;
   z-index: 9;
   font-family: "Mona Sans", sans-serif;
@@ -39,7 +38,7 @@
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
-  overflow: scroll; /* Enable scroll if needed */
+  overflow: hidden; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   display: flex;
@@ -76,7 +75,7 @@
 }
 
 .innerModal {
-  border: 1.5px solid black;
+  /* border: 1.5px solid black; */
   background-color: #f4faff;
   width: 50%;
   height: 70%;
