--- a/src/Components/Pagination/Pagination.css
+++ b/src/Components/Pagination/Pagination.css
@@ -30,24 +30,28 @@
 }
 
 .paginationNum {
-  /* border: 1px solid black; */
-  /* background-color: #e88873; */
-  /* padding: 10px; */
   margin: 10px;
   padding-bottom: 40px;
   font-family: "Mona-Sans Regular", sans-serif;
   list-style: none;
-
   text-align: center;
-
-  /* border-radius: 30%; */
 }
 
 .paginationText {
   text-align: center;
+  display: flex;
   font-family: "Mona-Sans Regular", sans-serif;
   font-weight: bold;
+  padding-left: 0 !important;
+  width: 3rem;
+  justify-content: center;
+  align-items: center;
   list-style: none;
+}
+
+.paginationText ul {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 .paginationNum :hover {
   cursor: pointer;
