--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -18,7 +18,6 @@
 }
 .personInfo {
   background-color: white;
-  /* border: 2px solid black; */
   border-radius: 10px !important;
   width: 75vw;
   height: 75vh !important;
@@ -28,18 +27,14 @@
   justify-items: center;
   font-family: "Mona-Sans Regular", sans-serif;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-
-  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
 }
 
 .personInfoBack {
   display: flex;
   flex-direction: row;
   background-color: white;
-  /* border: 2px solid black; */
   font-family: "Mona-Sans Regular", sans-serif;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-
   border-radius: 10px;
   width: 75vw;
   height: 75vh !important;
@@ -113,7 +108,6 @@
 }
 .backLText {
   margin: 10px;
-  /* border: 2px solid black; */
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   flex-direction: column;
   border-radius: 15px;
@@ -175,7 +169,6 @@
   width: 70%;
   height: 50vh;
   border-radius: 7px;
-  /* border: 2px solid black; */
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
   object-fit: cover;
@@ -198,6 +191,8 @@
     flex-direction: column;
     height: auto !important;
     width: 100vw;
+    padding: 0 !important;
+    box-shadow: none;
   }
   .personText {
     padding: 0rem !important;
@@ -248,8 +243,11 @@
   }
   .wholePage {
     margin-top: 0;
+    margin: 0 !important;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     list-style: none !important;
   }
 
