--- a/src/Components/StoryBox/StoryBox.css
+++ b/src/Components/StoryBox/StoryBox.css
@@ -1,5 +1,4 @@
 .storyBox {
-  /* border: 1px solid black; */
   background-color: #fff;
   border-radius: 5px;
   height: 40vh;
@@ -63,6 +62,25 @@
   margin: 1rem;
   font-family: "Mona-Sans Regular", sans-serif;
 }
+
+@media only screen and (max-width: 1000px) {
+  .storyBox {
+    width: 40vw !important;
+  }
+  .indivImage {
+    width: 100% !important;
+    height: 20vh !important;
+  }
+  .imgAndSlug {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 0;
+  }
+  .magnifyingGlass {
+    display: none;
+  }
+}
 @media only screen and (max-width: 600px) {
   .storyBox {
     height: 40vh !important;
@@ -72,10 +90,8 @@
 
   .imgAndSlug {
     display: flex;
-    /* grid-template-areas: "content-2 content-3"; */
     justify-content: center;
     align-items: center;
-    /* overflow: hidden; */
     border: 0;
   }
 
