--- a/src/Components/StoryBox/StoryBox.css
+++ b/src/Components/StoryBox/StoryBox.css
@@ -1,7 +1,7 @@
 .storyBox {
   background-color: #fff;
   border-radius: 5px;
-  height: 40vh;
+  height: 45vh;
   padding: 1px;
   width: 20vw;
   margin: 1.5vw;
@@ -26,7 +26,9 @@
   margin-bottom: 0.5rem !important;
   font-weight: bold;
   text-align: center;
-  font-family: "Mona-Sans Regular", sans-serif;
+  /* font-family: "Mona-Sans Regular", sans-serif;
+   */
+  font-family: "Space Grotesk", regular;
 }
 .storyBoxGrey {
   background-color: rgb(149, 149, 149) !important;
