--- a/src/Components/TwelveToSixteen/TwelveToSixteen.css
+++ b/src/Components/TwelveToSixteen/TwelveToSixteen.css
@@ -1,4 +1,5 @@
 .ageRangeh2 {
   margin: 0;
-  font-family: "Mona Sans", sans-serif;
+  /* font-family: "Mona Sans", sans-serif; */
+  font-family: "Space Grotesk", regular;
 }
