--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
-  background-color: #f5f5f7;
-  /* font-family: "Open Sans", sans-serif; */
+  /* background-color: #f5f5f7; */
+  background-color: #d9f0ff;
   font-family: "Futura Medium", sans-serif;
   max-width: 100%;
   max-height: 100%;
