--- a/src/Components/AnimCard/AnimCard.css
+++ b/src/Components/AnimCard/AnimCard.css
@@ -18,7 +18,8 @@
   align-items: center;
   font-size: large;
   justify-items: center;
-  font-family: "Mona-Sans Regular", sans-serif;
+  /* font-family: "Mona-Sans Regular", sans-serif;
+   */
 }
 .animCardVideo {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -34,7 +35,9 @@
 .personNameAnimCard {
   width: auto;
   font-weight: bold;
-  font-family: "Mona Sans", sans-serif;
+  /* font-family: "Mona Sans", sans-serif; */
+  font-family: "Space Grotesk", regular;
+
   margin: 3vh;
   margin-left: 5vh;
   width: 30vw;
@@ -49,7 +52,8 @@
   flex-direction: column;
   align-items: center;
   width: 80vw;
-  font-family: "Mona-Sans Regular", sans-serif;
+  /* font-family: "Mona-Sans Regular", sans-serif; */
+  font-family: "Space Grotesk", regular;
 }
 
 @media only screen and (max-width: 600px) {
