--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -5,9 +5,15 @@
   margin-top: 5vh;
   position: relative;
   font-size: large;
-  font-family: "Mona Sans", sans-serif;
+  /* font-family: "Mona Sans", sans-serif; */
+  font-family: "Space Grotesk", regular;
 }
 
+.OurWelshHistory {
+  margin-top: 0 !important;
+  /* font-size: xx-large; */
+  font-size: 50px;
+}
 .underlineNice {
   background-image: linear-gradient(90deg, #e67399, #f2a640);
   background-position: bottom;
@@ -19,8 +25,12 @@
 .introText {
   font-size: medium;
   margin-top: 0;
-  font-family: "Mona Sans", sans-serif;
+  /* font-family: "Mona Sans", sans-serif; */
+  font-family: "Space Grotesk", regular;
+
+  /* font-family: "ProximaNova", "Helvetica", "Arial", sans-serif; */
   list-style: none;
+  /* font-weight: 900; */
   text-align: left;
   align-items: center;
   justify-content: center;
@@ -34,8 +44,8 @@
   align-items: center;
   align-self: center;
   align-items: center;
-  justify-content: center;
-  width: 80%;
+  justify-content: flex-start;
+  width: 90%;
   margin: auto;
 }
 .testSize {
@@ -59,7 +69,9 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  font-family: "Mona Sans", sans-serif;
+  /* font-family: "Mona Sans", sans-serif; */
+  font-family: "Space Grotesk", regular;
+
   margin-bottom: 5vh;
   font-weight: light;
   padding-bottom: 5vh;
@@ -80,7 +92,8 @@
   margin-top: 1.5vw;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  font-family: "Mona-Sans Regular", sans-serif;
+  /* font-family: "Mona-Sans Regular", sans-serif; */
+  font-family: "Space Grotesk", regular;
 }
 
 .ageGroupIndivBlocked {
