--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,18 +10,10 @@
   font-family: "Mona Sans", sans-serif;
 }
 
-.navLeft {
-  width: 25%;
-}
-
 .navdiv2 {
-  /* width: 70%; */
   display: flex;
   flex-direction: row;
-  /* font-weight: bold;
-  font-size: large; */
   text-align: center;
-  /* justify-content: flex-start; */
   align-items: center;
   justify-content: center;
   margin: auto;
@@ -30,25 +22,37 @@
 }
 
 .modal {
-  /* display: none; Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 10101010010101010; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  z-index: 1121212121211212312312312312312312121; /* Sit on top */
+
   left: 0;
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: hidden; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  /* background-color: rgb(0, 0, 0); */
+  /* 
+  Fallback color */
+  /* background-color: rgba(0, 0, 0, 0.4); */
+  /* Black w/ opacity */
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  align-self: flex-end;
+  align-content: flex-end;
   justify-content: flex-start;
-  align-items: center;
-  align-self: center;
-  align-content: center;
-  /* margin-top: 0; */
-  justify-content: flex-start;
+}
+
+.fullPage {
+  position: fixed; /* Stay in place */
+  /* z-index: 10101010010101010; */
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: hidden; /* Enable scroll if needed */
 }
 
 .modalShow {
@@ -75,20 +79,30 @@
 }
 
 .innerModal {
-  /* border: 1.5px solid black; */
-  background-color: #f4faff;
-  width: 50%;
-  height: 70%;
+  width: 30%;
+  height: 100vh;
+  /* background-color: #258ea6; */
+  background-image: linear-gradient(90deg, #e67399, #f2a640, #258ea6);
+
+  color: #fff;
   display: flex;
   flex-direction: column;
   padding: 15px;
-  border-radius: 5px;
+  border-top-left-radius: 45px;
+  border-bottom-left-radius: 45px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 100px; */
+  z-index: 1121212121211212312312312312312312121; /* Sit on top */
 }
 
 .innerText {
   display: flex;
   justify-content: flex-end;
   font-family: "Mona-Sans Regular", sans-serif;
+  margin: 10px;
+  margin-right: 25px;
+  margin-bottom: 10px;
 }
 
 .innerText:hover {
@@ -99,11 +113,12 @@
   font-family: "Open Sans", sans-serif;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  align-self: center;
+  align-items: flex-start;
+  justify-content: flex-start;
+  align-self: flex-start;
   margin-top: 1vh;
   overflow: scroll;
+  height: 90%;
 }
 
 .infobutton:hover {
@@ -114,12 +129,18 @@
   transform: scale(1.2);
 }
 
+.burger {
+  margin: 20px;
+  margin-left: 40px;
+}
+
 .menus {
   display: flex;
   flex-direction: row;
   width: 25%;
   align-items: center;
-  justify-content: space-around;
+  padding-right: 20px;
+  justify-content: flex-end;
   font-family: "Mona-Sans Regular", sans-serif;
   font-weight: bold;
 }
@@ -129,6 +150,12 @@
 }
 .hoverNavCym:hover {
   cursor: pointer;
+}
+.cpyrght {
+  align-self: baseline;
+  margin: auto;
+  font-size: small;
+  font-family: "Space Grotesk", regular;
 }
 
 .hoverNavCym {
@@ -140,15 +167,17 @@
 
 .notesH2 {
   font-weight: bold;
-  font-family: "Mona-Sans Regular", sans-serif;
-  font-size: large;
+  /* padding-left: 10px; */
+  font-family: "Space Grotesk", regular;
+  font-size: xx-large;
   margin-bottom: 10px;
   margin-top: 10px;
+  margin-left: 20px;
 }
 
 .notesP {
   font-family: "Mona-Sans Regular", sans-serif;
-  text-align: center;
+  text-align: flex-start;
   margin-left: 20px;
   margin-right: 20px;
 }
@@ -185,7 +214,6 @@
   background-color: #fff;
   border-radius: 25px;
   transform: scale(1.5);
-  /* width: 50px; */
   font-family: "Mona-Sans Regular", sans-serif;
   z-index: 9;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -205,44 +233,11 @@
 }
 
 @media only screen and (max-width: 600px) {
-  /* .navdiv1 {
-    width: 5vw;
-    display: none;
-  }
-  .navdiv2 {
-    width: 80%;
-    display: flex;
-    justify-content: center;
-    z-index: 9;
-    margin-left: 0;
-    text-align: center;
-    font-size: medium;
-    margin-bottom: 0 !important;
-    padding-bottom: 0 !important;
-    font-family: "Mona Sans", sans-serif;
+  .innerModal {
+    width: 90%;
   }
 
-  .navdiv3 {
-    display: none;
-  }
-
-  .navbar {
-    font-size: x-small;
-    justify-content: space-evenly;
-    position: sticky !important;
-    background-color: #f4faff;
-    z-index: 1010101100;
-    margin-bottom: 0 !important;
-    padding-bottom: 0 !important;
-  }
-  .langbutton {
-    transform: scale(1.5);
-  }
-
-  .infobutton {
-    display: none;
-  } */
-  .navbar {
-    display: none;
+  .translateImg {
+    width: 40px;
   }
 }
