--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   font-family: "Futura Medium", sans-serif;
   background-color: #f5f5f7;
+  /* background-color: #d9f0ff; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
