--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -30,11 +30,7 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: hidden; /* Enable scroll if needed */
-  /* background-color: rgb(0, 0, 0); */
-  /* 
-  Fallback color */
-  /* background-color: rgba(0, 0, 0, 0.4); */
-  /* Black w/ opacity */
+
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -46,8 +42,6 @@
 
 .fullPage {
   position: fixed; /* Stay in place */
-  /* z-index: 10101010010101010; */
-  /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -81,8 +75,7 @@
 .innerModal {
   width: 30%;
   height: 100vh;
-  /* background-color: #258ea6; */
-  background-image: linear-gradient(90deg, #e67399, #f2a640, #258ea6);
+  background-color: #258ea6;
 
   color: #fff;
   display: flex;
@@ -119,6 +112,8 @@
   margin-top: 1vh;
   overflow: scroll;
   height: 90%;
+  width: 100%;
+  padding-left: 20px;
 }
 
 .infobutton:hover {
@@ -131,7 +126,11 @@
 
 .burger {
   margin: 20px;
-  margin-left: 40px;
+  /* margin-left: 40px; */
+}
+.hoverNav {
+  display: flex;
+  /* margin: auto; */
 }
 
 .menus {
@@ -173,6 +172,10 @@
   margin-bottom: 10px;
   margin-top: 10px;
   margin-left: 20px;
+}
+
+.notesH2:hover {
+  cursor: pointer;
 }
 
 .notesP {
