--- a/src/Components/Categories/Categories.css
+++ b/src/Components/Categories/Categories.css
@@ -36,3 +36,15 @@
   font-size: large;
   font-family: "Space Grotesk", regular;
 }
+
+@media only screen and (max-width: 600px) {
+  .ageGroupsCat {
+    flex-direction: column;
+  }
+
+  .ageGroupIndivCat {
+    width: 70vw;
+    height: 40vh;
+    margin-bottom: 5vh;
+  }
+}
